# titlefmt

./: .travis.yml  Cargo.toml  FUNCTIONS.md  LICENSE  README.md
src/: ffmpeg_audio.rs  format_parser.rs  formatter.rs  lib.rs  parser.rs  test.rs  tests.rs  value.rs
src/expression/: evaluation.rs  expression.rs  expression_parser.rs  function_call.rs  item.rs  mod.rs  parser.rs  test.rs  tests.rs  value.rs
src/function/: add.rs  and.rs  div.rs  greater.rs  if2.rs  if_.rs  max.rs  min.rs  mod.rs  mod_.rs  mul.rs  muldiv.rs  not.rs  or.rs  sub.rs  xor.rs
src/function/arithmetic/: add.rs  div.rs  greater.rs  max.rs  min.rs  mod.rs  mod_.rs  mul.rs  muldiv.rs  sub.rs
src/function/arithmetic/add/: mod.rs  test.rs
src/function/arithmetic/div/: mod.rs  test.rs
src/function/arithmetic/greater/: mod.rs  test.rs
src/function/arithmetic/max/: mod.rs  test.rs
src/function/arithmetic/min/: mod.rs  test.rs
src/function/arithmetic/mod_/: mod.rs  test.rs
src/function/control_flow/: if2.rs  if3.rs  if_.rs  ifequal.rs  ifgreater.rs  iflonger.rs  mod.rs  select.rs
src/function/control_flow/if2/: mod.rs  test.rs
src/function/control_flow/if3/: mod.rs  test.rs
src/function/control_flow/if_/: mod.rs  test.rs
src/function/control_flow/select/: mod.rs  test.rs
src/function/logical/: and.rs  mod.rs  not.rs  or.rs  xor.rs
src/function/logical/xor/: mod.rs  test.rs
src/function/string/: abbr.rs  caps.rs  caps2.rs  crlf.rs  cut.rs  mod.rs
src/function/string/abbr/: mod.rs  test.rs
src/function/string/ascii/: mod.rs  test.rs
src/function/string/caps/: mod.rs  test.rs
src/function/string/caps2/: mod.rs  test.rs
src/function/string/cut/: mod.rs  test.rs
src/function/string/directory/: mod.rs  test.rs
src/function/string/directory_path/: mod.rs  test.rs
src/function/string/ext/: mod.rs  test.rs
src/function/string/filename/: mod.rs  test.rs
src/function/string/hex/: mod.rs  test.rs
src/function/string/insert/: mod.rs  test.rs
src/function/string/left/: mod.rs  test.rs
src/function/string/right/: mod.rs  test.rs
src/function/string/substr/: mod.rs  test.rs
src/metadata/: mod.rs
