[package]
name = "titlefmt"
version = "0.3.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]
description = "Metadata Title Formatting Library"
license = "MIT/Apache-2.0"
repository = "https://github.com/suntorvic/titlefmt"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[dependencies]
nom = "4.2.0"
id3 = { version = "0.3.0", optional = true }
metaflac = { version = "0.1.8", optional = true }

[features]
metadata_libs = ["id3", "metaflac"]
titlefmtr = ["metadata_libs"]

[[bin]]
name = "titlefmtr"
required-features = ["titlefmtr"]