[package]
name = "titlefmt"
version = "0.4.1"
authors = ["Victor Nivet <victor@saumon.ninja>"]
description = "Metadata Title Formatting Library"
license = "MIT/Apache-2.0"
repository = "https://github.com/suntorvic/titlefmt"
readme="README.md"
keywords=["titleformat", "metadata", "parser", "formatting"]
categories = ["parser-implementations", "value-formatting", "multimedia"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    ".travis.yml",
]
edition = "2018"

[badges]
travis-ci = { repository = "suntorvic/titlefmt", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
nom = "4.2.0"
id3 = { version = "0.3.0", optional = true }
metaflac = { version = "0.1.8", optional = true }
unicode-normalization = { version = "0.1.8", optional = true }

[features]
default = ["unicode-normalization"]
metadata_libs = ["id3", "metaflac"]
titlefmtr = ["metadata_libs"]

[[bin]]
name = "titlefmtr"
required-features = ["titlefmtr"]